force-app/main/default/objects/Productos_para_EYN__mdt/Productos_para_EYN__mdt.object-meta.xml
<CustomObject>
    <label>Producto para EYN</label>
    <pluralLabel>Productos para EYN</pluralLabel>
</CustomObject>