force-app/main/default/objects/Productos_para_EYN__mdt/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <length>5</length>
    <type>Text</type>
</CustomField>