force-app/main/default/objects/Productos_para_EYN__mdt/fields/Codigo_de_producto_EYN__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_producto_EYN__c</fullName>
    <label>Código de producto EYN</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>