force-app/main/default/objects/Productos_para_EYN__mdt/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMN</fullName>
                <default>true</default>
                <label>AMN</label>
            </value>
            <value>
                <fullName>NUBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>